<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#211f1f"
    android:paddingTop="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="2dp">
    <TextView
        android:textColor="@color/white"
        android:id="@+id/tv_rljs1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_rljs2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rlah"
        android:layout_weight="2"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_rljs3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nlah"
        android:layout_weight="2"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_rljs4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/dcdy"
        android:layout_weight="2"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_rljs5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/xl"
        android:layout_weight="2"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_rljs6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dcrl"
        android:layout_weight="2"/>
</LinearLayout>
