<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:gravity="center"
            android:id="@+id/ed_dyxx"
            android:background="@drawable/edit_text_sect"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="4.0"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <TextView
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="&lt;="/>
        <TextView
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/dyxz"/>
        <EditText
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:gravity="center"
            android:id="@+id/ed_dysx"
            android:background="@drawable/edit_text_sect"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="15.0"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <EditText
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:gravity="center"
            android:background="@drawable/edit_text_sect"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="4"
            android:layout_weight="1"/>
        <TextView
            android:textSize="20dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="&lt;="/>
        <TextView
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/dlxz"/>
        <EditText
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:gravity="center"
            android:id="@+id/ed_dlsx"
            android:background="@drawable/edit_text_sect"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="5.0"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <RelativeLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:textSize="14dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xlsw"
            android:layout_toLeftOf="@+id/sw_kq"
            android:layout_centerVertical="true"/>
        <Switch
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:id="@+id/sw_kq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:textSize="14dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zdsw"
            android:layout_toLeftOf="@+id/sw_zd"
            android:layout_centerVertical="true"/>
        <Switch
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent_qs"
            android:id="@+id/sw_zd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:textSize="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_msg"/>
</LinearLayout>
