<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img_ble_icon"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:src="@mipmap/icon_bt"
        android:layout_centerVertical="true"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/img_ble_icon"
        android:layout_centerVertical="true">
        <TextView
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/deviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#9b8d8d"
            android:id="@+id/deviceMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true">
        <Button
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:id="@+id/btn_lj"
            android:background="@drawable/tab_label_fz_selector"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/connet"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_lj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_dk"
                android:background="@drawable/tab_label_fz_selector"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/disconnect"/>
            <Button
                android:textColor="@android:color/white"
                android:id="@+id/btn_jr"
                android:background="@drawable/tab_label_fz_selector"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/get_into"/>
        </LinearLayout>
        <TextView
            android:textColor="#19e313"
            android:gravity="center"
            android:layout_gravity="right"
            android:id="@+id/deviceRssi"
            android:background="@drawable/rssi_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <View
        android:background="#565656"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</RelativeLayout>
